--- a/loadImg_w_flickr/index.html
+++ b/loadImg_w_flickr/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>jQuery.loadImg</title>
 <link rel="stylesheet" href="style.css">
-<script src="jquery.min.js"></script>
-<script src="jquery.loadImg.js"></script>
+<script src="../jquery.min.js"></script>
+<script src="../jquery.loadImg.js"></script>
 <script>
 $(function(){
 	
